# liboplpp

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
OPLPlayer/: main.cpp  main.hpp
SampleSource/: OPLPlayer.cpp
Source/: liboplpp.cpp  liboplpp.hpp
Source/DosboxOPL/: config.h  dbopl.cpp  dbopl.h  dboplconfig.h  opl.cpp
Source/DosboxOPL/hardware/: adlib.cpp  adlib.h  config.h  dbopl.cpp  dbopl.h  dos_inc.h  dosbox.h  hardware.cpp  mem.h  mixer.cpp  mixer.h  support.cpp
Source/Emulators/DosboxOPL/: DosboxOPL.cpp  DosboxOPL.hpp  dbopl.cpp  dbopl.h
Source/Exceptions/: OplppException.cpp  OplppException.hpp
Source/FileFormats/DosboxRawOPL/: DosboxRawOPL.cpp  DosboxRawOPL.hpp
Source/FileFormats/OPLMidi/: OPLMidi.cpp  OPLMidi.hpp
Source/FileFormats/PCMWav/: PCMWav.cpp  PCMWav.hpp
Source/OPLMidi/: OPLMidi.cpp  OPLMidi.hpp
UnitTests/: main.cpp  main.hpp
